--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello</title>
+    <title>Contact Page</title>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <style>
 body {
@@ -19,7 +19,7 @@ h1 {
 </head>
 <body>
 
-<h1>Hello!</h1>
+<h1>This is the Contact Page!</h1>
 
 
 </body>
